--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/bahmutov/docker-file-permissions/issues"
   },
-  "homepage": "https://github.com/bahmutov/docker-file-permissions#readme"
+  "homepage": "https://github.com/bahmutov/docker-file-permissions#readme",
+  "dependencies": {
+    "execa": "^0.6.3"
+  }
 }
